Fix(style): overflow-y auto

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -13,4 +13,5 @@ html,body {
 .json-editor > div {
   flex: 1;
   height: 100%;
+  width: 100%;
 }
